--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7babf5">  <td>23/04/18 15:16:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterTest.test()[pri:0, instance:com.mavenPractice.ParameterTest@7e5afaa6]">test</td> 
-  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="8ef0ea">  <td>23/06/01 17:51:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StringOperations.removeDuplicate()[pri:0, instance:com.mavenPractice.StringOperations@78123e82]">removeDuplicate</td> 
+  <td>main@288958772</td>   <td></td> </tr>
 </table>
